add product and user to db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-spring.datasource.url = jdbc:mysql://localhost:3306/shopkartDB     // change db name accordingly
+spring.datasource.url = jdbc:mysql://localhost:3306/shopkartdb
 
 spring.datasource.username = root
 
@@ -14,8 +14,6 @@ spring.jpa.show-sql = true
 #or
 
 spring.jpa.hibernate.ddl-auto = update
-
-
 
 #spring.jpa.hibernate.ddl-auto = update				//comment line
 #
